--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -2021,6 +2021,7 @@
                     <button class="megic-btn mt-3" id="MegicBtn">
                         <span>Let the magic begin ✨</span>
                         <div class="progress-bar"></div>
+                        <img src="https://mergeasy123.netlify.app/sidebar/arrow.svg" >
                     </button>
                     <div class="progress-container">
                         <div id="progress-bar" class="progress-bar"></div>
