--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -2018,10 +2018,13 @@
                 </div>
 
                 <div>
-                    <button class="megic-btn mt-3" id="MegicBtn">
+                    <button class="megic-btn mt-3 position-relative" id="MegicBtn">
                         <span>Let the magic begin ✨</span>
                         <div class="progress-bar"></div>
-                        <img src="https://mergeasy123.netlify.app/sidebar/arrow.svg" >
+                        <img src="https://mergeasy123.netlify.app/sidebar/arrow.svg" class="arrow-icon" 
+                        style="position: absolute;
+                        top: 8px;
+                        right: 5%;">
                     </button>
                     <div class="progress-container">
                         <div id="progress-bar" class="progress-bar"></div>
