--- a/sidebar/scrapper.html
+++ b/sidebar/scrapper.html
@@ -11552,7 +11552,7 @@
         //         }
         //     });
         // });
-    
+    // awais
         $(document).ready(function () {
     const $megicBtn = $("#MegicBtn");              // Cache the Magic Button element
     const $ctaOptions = $(".cta-options");         // Cache the CTA options container
@@ -11642,16 +11642,16 @@
     // });
 });
 // If the button is clicked while in the submitting state, stop processing immediately
-$(".progress-bar").on("click", function () {
-    event.stopPropagation()
-        $megicBtn.addClass("d-none"); 
-        // if ($megicBtn.hasClass("submitting")) {
-        //     clearTimeout(progressTimeout);  // Stop the progress timeout
-        //     resetButton();  
-        //     $megicBtn.addClass("submitting2");   
-        //                     // Reset the button state to original
-        // }
-    });
+// $(".progress-bar").on("click", function () {
+//     event.stopPropagation()
+//         $megicBtn.addClass("d-none"); 
+//         // if ($megicBtn.hasClass("submitting")) {
+//         //     clearTimeout(progressTimeout);  // Stop the progress timeout
+//         //     resetButton();  
+//         //     $megicBtn.addClass("submitting2");   
+//         //                     // Reset the button state to original
+//         // }
+//     });
 
     </script>
     <!-- Add cards -->
